<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_gradual_change">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:background="@drawable/menu_block_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/title_color"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/id"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            <EditText
                    android:id="@+id/edit_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/id"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry,TextFields"
                    android:autofillHints="" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/password"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry,TextFields" />


        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry">

            <CheckBox
                    android:id="@+id/checkbox_remember_the_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/remember_the_password"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />


             <TextView
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/register"
                    android:textSize="12sp"
                      android:paddingEnd="4dp"
                    tools:ignore="SmallSp,UseSwitchCompatOrMaterialXml"
                     android:paddingRight="4dp" />
            <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:background="@color/design_default_color_on_secondary" />

            <TextView
                    android:id="@+id/button_forget_the_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/forget_the_password"
                    android:textSize="12sp"
                     android:paddingStart="4dp"
                    android:paddingEnd="12dp"
                    tools:ignore="SmallSp,UseSwitchCompatOrMaterialXml"
                    android:paddingRight="12dp"
                    android:paddingLeft="4dp" />


        </LinearLayout>

        <Button
                android:id="@+id/button_login"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_style"
                android:text="@string/login"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.346" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
