<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <TextView
                android:id="@+id/text_return"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@mipmap/return_ico"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/design_default_color_on_secondary"
                android:text="@string/add_device" />

        <TextView
                android:id="@+id/text_finish"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/design_default_color_on_secondary"
                android:text="@string/finish"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/device_name"
                android:textSize="15sp" />

        <EditText
                android:id="@+id/Edit_device_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_text_style"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                tools:ignore="LabelFor,RtlSymmetry,TextFields"
                android:autofillHints="" />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            tools:layout_editor_absoluteX="-16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="添加方式："
                android:textSize="15sp"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="181dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

            <CheckBox
                    android:id="@+id/checkBox_distribution_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="网络配网"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="236dp" />
            <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

            <CheckBox
                    android:id="@+id/checkBox_secret_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="生成秘钥"
                    tools:layout_editor_absoluteX="190dp"
                    tools:layout_editor_absoluteY="237dp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout13"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:text="设备描述："
                android:textSize="15sp" />

        <EditText
                android:id="@+id/Edit_describe"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_style"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                tools:ignore="LabelFor,RtlSymmetry,TextFields" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
