<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:landptf="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/gradual_change"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp">

        <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:paddingStart="20dp"
                    android:paddingLeft="5dp"
                    app:srcCompat="@mipmap/head_man"
                    tools:ignore="RtlSymmetry" />

            <TextView
                    android:id="@+id/menu_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/user_name"
                    android:textColor="@color/title_color"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

            <TextView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:gravity="right"
                    android:layout_gravity="right|center"
                    android:contentDescription="@string/todo"
                    android:background="@mipmap/sub_device_ico"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="left|center"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@mipmap/list_arrow"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_block_style"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="设备设置"
                    android:textSize="10sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:id="@+id/button_menu_add_device"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/add_device_ico"
                    landptf:style="iconLeft"
                    landptf:text="添加设备"
                    tools:ignore="RtlHardcoded" />

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="right"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/sub_device_ico"
                    landptf:style="iconLeft"
                    landptf:text="删除设备"
                    tools:ignore="RtlHardcoded" />

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="right"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/share_device_ico"
                    landptf:style="iconLeft"
                    landptf:text="分享设备"
                    tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_block_style"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="系统相关"
                    android:textSize="10sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/setup"
                    landptf:style="iconLeft"
                    landptf:text="系统设置"
                    tools:ignore="RtlHardcoded" />

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="right"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/update"
                    landptf:style="iconLeft"
                    landptf:text="系统更新"
                    tools:ignore="RtlHardcoded" />

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="right"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:id="@+id/menu_about"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/abut"
                    landptf:style="iconLeft"
                    landptf:text="关于"
                    tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_block_style"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="其他"
                    android:textSize="10sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />


            <com.example.androidmqttclient.View.ButtonExtendM
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/feedback"
                    landptf:style="iconLeft"
                    landptf:text="反馈"
                    tools:ignore="RtlHardcoded" />

            <TextView
                    android:layout_width="200dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="right"
                    android:background="@color/horizontal_line_color"
                    tools:ignore="RtlSymmetry" />

            <com.example.androidmqttclient.View.ButtonExtendM
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    landptf:iconDrawable="@mipmap/contact"
                    landptf:style="iconLeft"
                    landptf:text="联系"
                    tools:ignore="RtlHardcoded" />
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

            <Button
                    android:id="@+id/button_exit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/brown"
                    android:background="@drawable/menu_block_style"
                    android:text="@string/login_out"

                    android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>